text-overflow: ellipsis truncates the text incorrectly in RTL https://bugs.webkit.org/show_bug.cgi?id=164999 <rdar://problem/29464657>

Reviewed by Antti Koivisto.

This patch addresses https://github.com/w3c/csswg-drafts/issues/2125 which clarifies truncation behavior
when content direction != inline direction.

truncateOverflowingDisplayBoxes: mismatching direction requires truncation starting from the beginning of the content.
paintForegroundAndDecorations: since TextBoxSelectableRange only has the truncated length, we need to adjust the position for mismatching direction.

* LayoutTests/TestExpectations: 27 and 28 have also progressed but we seem to have some rounding bugs getting an extra character truncated (Chrome too).
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::truncateOverflowingDisplayBoxes):
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter<TextBoxPath>::paintForegroundAndDecorations):
(WebCore::TextBoxPainter<TextBoxPath>::computePaintRect):

Canonical link: https://commits.webkit.org/263418@main